Fix title font size on mobile from "Have questions?" section

--- a/src/components/StartupPage/HaveQuestions/styles.module.less
+++ b/src/components/StartupPage/HaveQuestions/styles.module.less
@@ -29,6 +29,7 @@
   @media (max-width: 768px) {
     h2 {
       text-align: center;
+      font-size: 2.25rem;
     }
 
     a:first-of-type, a:last-of-type {
